Fixed table header and table value spacing

--- a/src/style/molecules/table/_header.scss
+++ b/src/style/molecules/table/_header.scss
@@ -1,4 +1,5 @@
 @include e(header) {
   line-height: rem-calc(32);
   border-bottom: solid rem-calc(1) $grey-33;
+  th { padding-right: 0.625rem; }
 };
